:white_check_mark: (changelog): Fixed a bug in the test mock